--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cam-Shooter.io</title>
-    <meta name="description" content="Hand Gesture Shooter Game - Use your finger gun to shoot targets!" />
-    <meta name="author" content="Cam-Shooter" />
 
-    <meta property="og:title" content="Cam-Shooter.io" />
-    <meta property="og:description" content="Hand Gesture Shooter Game - Use your finger gun to shoot targets!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cam-Shooter.io</title>
+  <meta name="description" content="Hand Gesture Shooter Game - Use your finger gun to shoot targets!" />
+  <meta name="author" content="Cam-Shooter" />
+  <link rel="icon" href="data:," />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@CamShooter" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Cam-Shooter.io" />
+  <meta property="og:description" content="Hand Gesture Shooter Game - Use your finger gun to shoot targets!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@CamShooter" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
