--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Cam-Shooter.io</title>
   <meta name="description" content="Hand Gesture Shooter Game - Use your finger gun to shoot targets!" />
   <meta name="author" content="Cam-Shooter" />
